--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,7 @@
 %section#hero
   %header
     %h1
-      Mitch and Megs Photography Static Site
+      Mitch and Megs Photography Static Site 2
 %nav.navbar.navbar-fixed-top#navbar
   %ul.nav.navbar-nav
     %li
