Static site differentiator.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -22,7 +22,7 @@
   %article
     .container
       %h3
-        CAPTURING MEMORIES FOR A LIFETIME
+        CAPTURING MEMORIES FOR A LIFETIME.
       %p
         We are photographers in the beautiful Northern San Francisco Bay Area specializing in personal experiences. For us photography is more than a studio and a nice glossy 8x10 to hang on the wall. It’s about getting to know our clients and finding ways to express who they are in photographs and capturing images for a lifetime to come.
 %section#lifestyle
